--- a/css/styles.css
+++ b/css/styles.css
@@ -32,3 +32,9 @@ nav ul li a {
 nav ul li a:hover {
     color: #ffcc00;
 }
+/* Slider styles */
+.slider {
+    position: relative;
+    height: 500px;
+    background: url('../img/bg.jpg') no-repeat center center cover;
+}
