--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ nav ul li a:hover {
 .slider {
     position: relative;
     height: 500px;
-    background: url('../img/bg.jpg');
+    background: url('https://img.reintech.io/variants/o2douig2cv91edd7suk5nqheflzd/e7b4ce09c703210ab8f75b017c7eaf0951c5a95b737ee8120602845c1c1d944b') no-repeat center center /cover;
 }
 .slider-overlay {
     position: absolute;
